--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        window.location.href = "./datos.md";
+        window.location.href = "./datos";
     </script>
     
 </body>
